# omarchy-theme-targets

./: CODEX_REPORT.md  README.md  pyproject.toml
docs/: adapters.md  theme-targets.md  upstream-omarchy-prs.md
scripts/: check.sh
src/omarchy_theme_targets/: __init__.py  cli.py  colors.py  doctor.py  hooks.py  palette.py  safety.py  targets.py
src/omarchy_theme_targets/targets/btop/: manifest.toml
src/omarchy_theme_targets/targets/btop/templates/: omarchy.theme
src/omarchy_theme_targets/targets/darktable/: manifest.toml
src/omarchy_theme_targets/targets/darktable/templates/: omarchy.css
src/omarchy_theme_targets/targets/gtk/: manifest.toml
src/omarchy_theme_targets/targets/gtk/templates/: gtk.css
src/omarchy_theme_targets/targets/obsidian/: manifest.toml
src/omarchy_theme_targets/targets/obsidian/templates/: omarchy.css
tests/: test_cli.py  test_colors_palette.py  test_targets_safety_doctor.py
tests/fixtures/osaka-jade/: colors.toml
